--- a/styles/style.css
+++ b/styles/style.css
@@ -64,6 +64,10 @@ p {
   padding: 20px 80px;
   background-color: antiquewhite;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+  z-index: 999;
+  position: sticky;
+  top: 0;
+  left: 0;
 }
 #navbar {
   display: flex;
@@ -99,4 +103,35 @@ p {
   position: absolute;
   bottom: -4px;
   left: 20px;
+}
+
+/* banner section */
+#hero {
+  background-image: url("/assets/hero-banner.png");
+  width: 100%;
+  height: 90vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 0px 80px;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+}
+
+.hero-texts h1 {
+  color: chocolate;
+}
+
+.hero-texts button {
+  padding: 10px 20px;
+  background-color: chocolate;
+  color: white;
+  border: 0;
+  border-radius: 8%;
+  transition: 0.3s ease;
+}
+
+.hero-texts button:hover {
+  background-color: cadetblue;
 }
