--- a/styles/style.css
+++ b/styles/style.css
@@ -135,3 +135,35 @@ p {
 .hero-texts button:hover {
   background-color: cadetblue;
 }
+
+#features .feature-div {
+  width: 200px;
+  text-align: center;
+  border-radius: 5px;
+  padding: 25px 15px;
+  box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
+  border: 1px solid #cce7d0;
+  transition: 0.3s ease;
+}
+#features .feature-div img {
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+#features .feature-div h6 {
+  padding: 6px 4px;
+  color: chocolate;
+
+  display: inline-block;
+}
+#features .feature-div:hover {
+  border: 1px solid chocolate;
+  transform: scale(1.05);
+}
+
+#features {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
